--- a/api/src/main/resources/db/changelog/data/08-movie-genre.yaml
+++ b/api/src/main/resources/db/changelog/data/08-movie-genre.yaml
@@ -199,7 +199,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: movie_id
-                  value: a1b2c3d4-e5f6-4g7h-8i9j-0k1l2m3n4o5p # Wonder Woman
+                  value: dfd9016b-4c19-4c7a-9355-6df4633021cc # Wonder Woman
               - column:
                   name: genre_id
                   value: a4dcbf78-2f6b-4e26-bf92-576d3b81f067 # Action
@@ -209,7 +209,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: movie_id
-                  value: a1b2c3d4-e5f6-4g7h-8i9j-0k1l2m3n4o5p # Wonder Woman
+                  value: dfd9016b-4c19-4c7a-9355-6df4633021cc # Wonder Woman
               - column:
                   name: genre_id
                   value: 5e6f7d8a-4b9c-42d3-a8e4-cb6f7a9b0d2e # Adventure
@@ -219,7 +219,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: movie_id
-                  value: h9i8j7k6-l5m4-n3o2-p1q0-r8s7t6u5v4w3 # Selma
+                  value: a957588e-2436-48ce-9c44-af77e53919ee # Selma
               - column:
                   name: genre_id
                   value: d5f9e2a6-2e6d-4a11-bb08-0e1a3d4e5c32 # Biography
@@ -229,7 +229,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: movie_id
-                  value: h9i8j7k6-l5m4-n3o2-p1q0-r8s7t6u5v4w3 # Selma
+                  value: a957588e-2436-48ce-9c44-af77e53919ee # Selma
               - column:
                   name: genre_id
                   value: c9e0b6f3-a9b5-40e3-b1ef-1a7b2c8a7e44 # Drama
@@ -239,7 +239,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: movie_id
-                  value: v1w2x3y4-z5a6-b7c8-d9e0-f1g2h3i4j5k6 # The Shape of Water
+                  value: 05442f23-9fc3-422e-8df6-d443d77d039d # The Shape of Water
               - column:
                   name: genre_id
                   value: c9e0b6f3-a9b5-40e3-b1ef-1a7b2c8a7e44 # Drama
@@ -249,7 +249,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: movie_id
-                  value: v1w2x3y4-z5a6-b7c8-d9e0-f1g2h3i4j5k6 # The Shape of Water
+                  value: 05442f23-9fc3-422e-8df6-d443d77d039d # The Shape of Water
               - column:
                   name: genre_id
                   value: e1a7c9d2-5e8d-4a9f-9b7c-3f6a7c8e9d9f # Fantasy
@@ -259,7 +259,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: movie_id
-                  value: u1v2w3x4-y5z6-a7b8-c9d0-e1f2g3h4i5j6 # Birdman
+                  value: 77aa3bca-b8ae-4df9-aaf3-75770db7fcc7 # Birdman
               - column:
                   name: genre_id
                   value: c9e0b6f3-a9b5-40e3-b1ef-1a7b2c8a7e44 # Drama
@@ -269,7 +269,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: movie_id
-                  value: u1v2w3x4-y5z6-a7b8-c9d0-e1f2g3h4i5j6 # Birdman
+                  value: 77aa3bca-b8ae-4df9-aaf3-75770db7fcc7 # Birdman
               - column:
                   name: genre_id
                   value: e0b74d6b-82d2-4a4a-9bbf-2a7dbe2e5f7c # Comedy
@@ -279,7 +279,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: movie_id
-                  value: o9p8q7r6-s5t4-u3v2-w1x0-y9z8a7b6c5d4 # Monster
+                  value: a5c1bfeb-c486-4faf-8b15-a8b736bbca60 # Monster
               - column:
                   name: genre_id
                   value: d5f9e2a6-2e6d-4a11-bb08-0e1a3d4e5c32 # Biography
@@ -289,7 +289,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: movie_id
-                  value: o9p8q7r6-s5t4-u3v2-w1x0-y9z8a7b6c5d4 # Monster
+                  value: a5c1bfeb-c486-4faf-8b15-a8b736bbca60 # Monster
               - column:
                   name: genre_id
                   value: f3e2c5a1-d3c4-4d5e-a9a4-89e4b7d5c9d0 # Crime
@@ -299,7 +299,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: movie_id
-                  value: b1c2d3e4-f5g6-h7i8-j9k0-l1m2n3o4p5q6 # Nomadland
+                  value: 0eeb461e-95db-4173-a3bc-44ba36cac6b2 # Nomadland
               - column:
                   name: genre_id
                   value: c9e0b6f3-a9b5-40e3-b1ef-1a7b2c8a7e44 # Drama
@@ -309,7 +309,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: movie_id
-                  value: b1c2d3e4-f5g6-h7i8-j9k0-l1m2n3o4p5q6 # Nomadland
+                  value: 0eeb461e-95db-4173-a3bc-44ba36cac6b2 # Nomadland
               - column:
                   name: genre_id
                   value: b2e8a4f9-8c7d-4c87-95c5-0a9b2c4a3e19 # Documentary
@@ -319,7 +319,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: movie_id
-                  value: d1e2f3g4-h5i6-j7k8-l9m0-n1o2p3q4r5s6 # No Country for Old Men
+                  value: 301b439f-cd66-4e3a-a781-e8a7e7627a01 # No Country for Old Men
               - column:
                   name: genre_id
                   value: f3e2c5a1-d3c4-4d5e-a9a4-89e4b7d5c9d0 # Crime
@@ -329,7 +329,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: movie_id
-                  value: d1e2f3g4-h5i6-j7k8-l9m0-n1o2p3q4r5s6 # No Country for Old Men
+                  value: 301b439f-cd66-4e3a-a781-e8a7e7627a01 # No Country for Old Men
               - column:
                   name: genre_id
                   value: c9e0b6f3-a9b5-40e3-b1ef-1a7b2c8a7e44 # Drama
@@ -339,7 +339,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: movie_id
-                  value: x1y2z3w4-v5u6-t7s8-r9q0-p1o2n3m4l5k6 # The Grand Budapest Hotel
+                  value: 9e0f9f41-eae0-40a1-9864-32eb760ca140 # The Grand Budapest Hotel
               - column:
                   name: genre_id
                   value: e0b74d6b-82d2-4a4a-9bbf-2a7dbe2e5f7c # Comedy
@@ -349,7 +349,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: movie_id
-                  value: x1y2z3w4-v5u6-t7s8-r9q0-p1o2n3m4l5k6 # The Grand Budapest Hotel
+                  value: 9e0f9f41-eae0-40a1-9864-32eb760ca140 # The Grand Budapest Hotel
               - column:
                   name: genre_id
                   value: c9e0b6f3-a9b5-40e3-b1ef-1a7b2c8a7e44 # Drama
@@ -359,7 +359,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: movie_id
-                  value: z3x4c5v6-b7n8-m9l0-k1j2-h3g4f5d6s7a8 # The Revenant
+                  value: 19c5893f-cddb-4142-a71e-4eedb158ffd8 # The Revenant
               - column:
                   name: genre_id
                   value: 5e6f7d8a-4b9c-42d3-a8e4-cb6f7a9b0d2e # Adventure
@@ -369,7 +369,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: movie_id
-                  value: z3x4c5v6-b7n8-m9l0-k1j2-h3g4f5d6s7a8 # The Revenant
+                  value: 19c5893f-cddb-4142-a71e-4eedb158ffd8 # The Revenant
               - column:
                   name: genre_id
                   value: c9e0b6f3-a9b5-40e3-b1ef-1a7b2c8a7e44 # Drama
@@ -379,7 +379,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: movie_id
-                  value: p9o8i7u6-y5t4-r3e2-w1q0-a9s8d7f6g5h4 # Eternals
+                  value: bf44cea7-f692-4180-af83-01fe0d17bc80 # Eternals
               - column:
                   name: genre_id
                   value: a4dcbf78-2f6b-4e26-bf92-576d3b81f067 # Action
@@ -389,7 +389,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: movie_id
-                  value: p9o8i7u6-y5t4-r3e2-w1q0-a9s8d7f6g5h4 # Eternals
+                  value: bf44cea7-f692-4180-af83-01fe0d17bc80 # Eternals
               - column:
                   name: genre_id
                   value: 5e6f7d8a-4b9c-42d3-a8e4-cb6f7a9b0d2e # Adventure
@@ -399,7 +399,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: movie_id
-                  value: j1k2l3m4-n5b6-v7c8-x9z0-q1w2e3r4t5y6 # The Big Lebowski
+                  value: 4f3c9789-897d-4497-bd95-a2188177c7d4 # The Big Lebowski
               - column:
                   name: genre_id
                   value: e0b74d6b-82d2-4a4a-9bbf-2a7dbe2e5f7c # Comedy
@@ -409,7 +409,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: movie_id
-                  value: j1k2l3m4-n5b6-v7c8-x9z0-q1w2e3r4t5y6 # The Big Lebowski
+                  value: 4f3c9789-897d-4497-bd95-a2188177c7d4 # The Big Lebowski
               - column:
                   name: genre_id
                   value: f3e2c5a1-d3c4-4d5e-a9a4-89e4b7d5c9d0 # Crime
@@ -419,7 +419,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: movie_id
-                  value: l4k5j6h7-g8f9-d0s1-a2p3-o4i5u6y7t8r9 # Moonrise Kingdom
+                  value: b0b697a4-6534-4552-a53b-815f874d468b # Moonrise Kingdom
               - column:
                   name: genre_id
                   value: e0b74d6b-82d2-4a4a-9bbf-2a7dbe2e5f7c # Comedy
@@ -429,7 +429,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: movie_id
-                  value: l4k5j6h7-g8f9-d0s1-a2p3-o4i5u6y7t8r9 # Moonrise Kingdom
+                  value: b0b697a4-6534-4552-a53b-815f874d468b # Moonrise Kingdom
               - column:
                   name: genre_id
                   value: c9e0b6f3-a9b5-40e3-b1ef-1a7b2c8a7e44 # Drama
@@ -439,7 +439,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: movie_id
-                  value: a8b9c0d1-e2f3-g4h5-i6j7-k8l9m0n1o2p3 # Dune
+                  value: 44feaba4-523d-4dc9-87b7-c31ae90abd16 # Dune
               - column:
                   name: genre_id
                   value: 5e6f7d8a-4b9c-42d3-a8e4-cb6f7a9b0d2e # Adventure
@@ -449,7 +449,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: movie_id
-                  value: a8b9c0d1-e2f3-g4h5-i6j7-k8l9m0n1o2p3 # Dune
+                  value: 44feaba4-523d-4dc9-87b7-c31ae90abd16 # Dune
               - column:
                   name: genre_id
                   value: f3e2c5a1-d3c4-4d5e-a9a4-89e4b7d5c9d0 # Sci-Fi
