--- a/api/src/main/resources/db/changelog/data/10-movie-production.yaml
+++ b/api/src/main/resources/db/changelog/data/10-movie-production.yaml
@@ -109,7 +109,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: movie_id
-                  value: a1b2c3d4-e5f6-4g7h-8i9j-0k1l2m3n4o5p # Wonder Woman
+                  value: dfd9016b-4c19-4c7a-9355-6df4633021cc # Wonder Woman
               - column:
                   name: company_id
                   value: c894946e-20b1-441d-b9c9-7bf5a0feadd8 # Warner Bros. Pictures
@@ -119,7 +119,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: movie_id
-                  value: h9i8j7k6-l5m4-n3o2-p1q0-r8s7t6u5v4w3 # Selma
+                  value: a957588e-2436-48ce-9c44-af77e53919ee # Selma
               - column:
                   name: company_id
                   value: 4130511e-03b8-4d79-bbbb-adc31242578c # Paramount Pictures
@@ -129,7 +129,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: movie_id
-                  value: v1w2x3y4-z5a6-b7c8-d9e0-f1g2h3i4j5k6 # The Shape of Water
+                  value: 05442f23-9fc3-422e-8df6-d443d77d039d # The Shape of Water
               - column:
                   name: company_id
                   value: b367c3d4-2a86-4e73-925c-a6b9570c3bb8 # Fox Searchlight Pictures
@@ -139,7 +139,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: movie_id
-                  value: u1v2w3x4-y5z6-a7b8-c9d0-e1f2g3h4i5j6 # Birdman
+                  value: 77aa3bca-b8ae-4df9-aaf3-75770db7fcc7 # Birdman
               - column:
                   name: company_id
                   value: 5faf7ec1-5dc1-4d48-96c8-252e6a1a1b46 # New Regency
@@ -149,7 +149,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: movie_id
-                  value: o9p8q7r6-s5t4-u3v2-w1x0-y9z8a7b6c5d4 # Monster
+                  value: a5c1bfeb-c486-4faf-8b15-a8b736bbca60 # Monster
               - column:
                   name: company_id
                   value: a768273e-f4a4-448a-a5aa-23ac57774593 # Media 8 Entertainment
@@ -159,7 +159,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: movie_id
-                  value: b1c2d3e4-f5g6-h7i8-j9k0-l1m2n3o4p5q6 # Nomadland
+                  value: 0eeb461e-95db-4173-a3bc-44ba36cac6b2 # Nomadland
               - column:
                   name: company_id
                   value: b367c3d4-2a86-4e73-925c-a6b9570c3bb8 # Searchlight Pictures
@@ -169,7 +169,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: movie_id
-                  value: d1e2f3g4-h5i6-j7k8-l9m0-n1o2p3q4r5s6 # No Country for Old Men
+                  value: 301b439f-cd66-4e3a-a781-e8a7e7627a01 # No Country for Old Men
               - column:
                   name: company_id
                   value: b531d2b8-f7d9-4466-82ab-a4a8241b9998 # Miramax
@@ -179,7 +179,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: movie_id
-                  value: x1y2z3w4-v5u6-t7s8-r9q0-p1o2n3m4l5k6 # The Grand Budapest Hotel
+                  value: 9e0f9f41-eae0-40a1-9864-32eb760ca140 # The Grand Budapest Hotel
               - column:
                   name: company_id
                   value: b367c3d4-2a86-4e73-925c-a6b9570c3bb8 # Fox Searchlight Pictures
@@ -189,47 +189,47 @@ databaseChangeLog:
             columns:
               - column:
                   name: movie_id
-                  value: z3x4c5v6-b7n8-m9l0-k1j2-h3g4f5d6s7a8 # The Revenant
+                  value: 19c5893f-cddb-4142-a71e-4eedb158ffd8 # The Revenant
               - column:
                   name: company_id
-                  value: d2e3f4g5-h6i7-j8k9-l0m1-n2o3p4q5r6s # Regency Enterprises
+                  value: 65393d03-37c8-4b90-b804-7339366133a5 # Regency Enterprises
 
         - insert:
             tableName: movie_production
             columns:
               - column:
                   name: movie_id
-                  value: p9o8i7u6-y5t4-r3e2-w1q0-a9s8d7f6g5h4 # Eternals
+                  value: bf44cea7-f692-4180-af83-01fe0d17bc80 # Eternals
               - column:
                   name: company_id
-                  value: a7b8c9d0-e1f2-g3h4-i5j6-k7l8m9n0o1p2 # Marvel Studios
+                  value: 98bf8b5c-3613-4d8b-9ab9-c12d0456b9d3 # Marvel Studios
 
         - insert:
             tableName: movie_production
             columns:
               - column:
                   name: movie_id
-                  value: j1k2l3m4-n5b6-v7c8-x9z0-q1w2e3r4t5y6 # The Big Lebowski
+                  value: 4f3c9789-897d-4497-bd95-a2188177c7d4 # The Big Lebowski
               - column:
                   name: company_id
-                  value: c3d4e5f6-7g8h-9i0j-k1l2-m3n4o5p6q7r8 # Working Title Films
+                  value: d1905f82-a1c5-41fd-8a88-0cb6226baa96 # Working Title Films
 
         - insert:
             tableName: movie_production
             columns:
               - column:
                   name: movie_id
-                  value: l4k5j6h7-g8f9-d0s1-a2p3-o4i5u6y7t8r9 # Moonrise Kingdom
+                  value: b0b697a4-6534-4552-a53b-815f874d468b # Moonrise Kingdom
               - column:
                   name: company_id
-                  value: e4f5g6h7-i8j9-k0l1-m2n3-o4p5q6r7s8t9 # American Empirical Pictures
+                  value: 563fe8a9-7d7b-443f-afb6-fe58c461afdb # American Empirical Pictures
 
         - insert:
             tableName: movie_production
             columns:
               - column:
                   name: movie_id
-                  value: a8b9c0d1-e2f3-g4h5-i6j7-k8l9m0n1o2p3 # Dune
+                  value: 44feaba4-523d-4dc9-87b7-c31ae90abd16 # Dune
               - column:
                   name: company_id
-                  value: d4e5f6g7-h8i9-j0k1-l2m3-n4o5p6q7r8s9 # Legendary Entertainment
+                  value: c04f3c9d-d1f8-473a-bfb9-7074dbaddb85 # Legendary Entertainment
